# moma

./: .gitignore  AGENTS.md  AI_AGENT.md  CHANGELOG.md  CLAUDE.md  DEVELOP.md  ENGINEERING_GUIDE.md  INSTALL.md  README.md  REFACTORING_PROGRESS.md  ToDo.md  justfile  main.py  pyproject.toml  todo.txt
.github/workflows/: ci.yml  release.yml
docs/: REFACTORING_PROGRESS.md  ToDo.md
renamer/: __init__.py  app.py  cache.py  constants.py  extractor.py  logging_config.py  release.py  screens.py  secrets.py  settings.py  utils.py
renamer/cache/: __init__.py  core.py  decorators.py  strategies.py  types.py
renamer/constants/: __init__.py  cyrillic_constants.py  edition_constants.py  frame_constants.py  media_constants.py  moviedb_constants.py  source_constants.py
renamer/decorators/: __init__.py  caching.py
renamer/extractors/: __init__.py  default_extractor.py  extractor.py  fileinfo_extractor.py  filename_extractor.py  mediainfo_extractor.py  metadata_extractor.py  tmdb_extractor.py
renamer/formatters/: __init__.py  catalog_formatter.py  color_formatter.py  conditional_decorators.py  date_decorators.py  date_formatter.py  duration_decorators.py  extension_extractor.py  extension_formatter.py  formatter.py  media_formatter.py  proposed_name_formatter.py  resolution_decorators.py  resolution_formatter.py  size_formatter.py  special_info_decorators.py  special_info_formatter.py  text_decorators.py  text_formatter.py  track_formatter.py
renamer/services/: __init__.py  conversion_service.py  file_tree_service.py  metadata_service.py  rename_service.py
renamer/test/: conftest.py  filenames.txt  fill_sample_mediafiles.py  test_cache_subsystem.py  test_cases.json  test_decorators.py  test_fileinfo_extractor.py  test_filename_detection.py  test_filename_extractor.py  test_filenames.txt  test_formatters.py  test_mediainfo_extractor.py  test_mediainfo_frame_class.json  (+6 more)
src/: __init__.py  app.py  bump.py  logging_config.py  main.py  settings.py
(+86 files in other folders)
