[project]
name = "renamer"
version = "0.2.6"
description = "Terminal-based media file renamer and metadata viewer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mutagen>=1.47.0",
    "textual>=6.11.0",
    "python-magic>=0.4.27",
    "pymediainfo>=6.0.0",
    "pytest>=7.0.0",
    "langcodes>=3.5.1",
]

[project.scripts]
renamer = "renamer.main:main"
bump-version = "renamer.bump:main"
release = "renamer.release:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["renamer/test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
