[project]
name = "moma"
version = "0.9.9"
description = "Terminal-based media file renamer and metadata viewer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mutagen>=1.47.0",
    "textual>=6.11.0",
    "python-magic>=0.4.27",
    "pymediainfo>=6.0.0",
    "pytest>=7.0.0",
    "langcodes>=3.5.1",
    "requests>=2.31.0",
    "rich-pixels>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "types-requests>=2.31.0",
]

[project.scripts]
moma = "src.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["src/test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
